feat: Implement SET method in MOUSE