@@ -2,6 +2,7 @@ package pl.genschu.bloomooemulator.interpreter.variable;
 
 import com.badlogic.gdx.Gdx;
 import pl.genschu.bloomooemulator.annotations.InternalMutable;
+import pl.genschu.bloomooemulator.engine.input.InputManager;
 import pl.genschu.bloomooemulator.interpreter.helpers.ArgumentHelper;
 import pl.genschu.bloomooemulator.interpreter.values.*;
 
@@ -162,8 +163,8 @@ public record MouseVariable(
 
         Map.entry("SETPOSITION", MethodSpec.of((self, args, ctx) -> {
             MouseVariable mouse = (MouseVariable) self;
-            int x = Math.max(0, Math.min(800, ArgumentHelper.getInt(args.get(0))));
-            int y = Math.max(0, Math.min(600, ArgumentHelper.getInt(args.get(1))));
+            int x = Math.clamp(ArgumentHelper.getInt(args.get(0)), 0, 800);
+            int y = Math.clamp(ArgumentHelper.getInt(args.get(1)), 0, 600);
             if (x != mouse.state.posX || y != mouse.state.posY) {
                 mouse.state.posX = x;
                 mouse.state.posY = y;
@@ -171,6 +172,20 @@ public record MouseVariable(
                     mouse.emitSignal("ONMOVE");
                 }
             }
+            return MethodResult.noReturn();
+        })),
+
+        Map.entry("SET", MethodSpec.of((self, args, ctx) -> {
+            if (args.size() != 1) {
+                throw new IllegalArgumentException("SET requires 1 argument");
+            }
+
+            String cursorName = ArgumentHelper.getString(args.get(0));
+            var cursor = InputManager.MouseCursor.fromName(cursorName);
+            if (cursor != null) {
+                ctx.getGame().getInputManager().setMouseCursor(cursor);
+            }
+
             return MethodResult.noReturn();
         })),
 
